tests/negative/typecheck/try_sum_not_error.orng
// try_sum_not_error.orng:11:11: error: expected error type for try, got `My_Error`
//     try f()
//          ^
// 
enum My_Error {
    ok(Int)
    err(Bool)
}

fn main() -> Int {
    try f()
}

fn f() -> My_Error {
    return .err(false)
}